# tradepro

./: .env.aws.example  .env.compose.example  .gitignore  COORDINATION.md  CURRENT_BACKTEST_LIMITATIONS.md  Caddyfile  DATA_ROADMAP.md  EVALUATION.md  IMPROVEMENT_SUGGESTIONS_v1.md  OVERNIGHT_SUMMARY_2026_05_29.md  README.md  ROADMAP.md  SIGNAL_CARD_SPEC_v1.md  STRATEGIES.md  TRUST_STATUS.md  VISION.md  compose.yaml  docker-compose.aws.yaml  tradepro_eval_regression.yaml
strategies/: .dockerignore  CONCEPTS.md  Dockerfile.extractor  Dockerfile.worker  PAPER_TRADING.md  README.md  behave.ini  pyproject.toml  requirements-ml.txt  requirements.txt
strategies/docs/: QUANT_ENGINE_GAPS.md  TradePro_Horizon_Classification_Spec.docx  TradePro_Roadmap_May2026.docx  api.json  tradepro-hlr-signal-replay.docx
strategies/features/: adjusted_close.feature  allocation_view.feature  bar_cache.feature  bollinger.feature  bucket.feature  bus_lookback.feature  catalysts.feature  coherence_enforcement.feature  combined_verdict.feature  compass_scorer.feature  conviction.feature  cross_sectional.feature  data_worker.feature  dispersion.feature  dividend_dashboard.feature  documents.feature  earnings.feature  earnings_suppressor.feature  email_charts.feature  email_digest.feature  email_pdf.feature  entry_timing.feature  environment.py  eps_tracker.feature  etf_xray.feature  exit_framework.feature  fundamental_analysis.feature  fundamentals.feature  gems.feature  holdings.feature  horizon_demotion.feature  horizons.feature  ichimoku.feature  intraday_flat.feature  llm_health.feature  llm_signal_gate.feature  macro_regime.feature  manual_mf_sleeve.feature  market_state_classify.feature  market_state_fields.feature  (+36 more)
strategies/features/steps/: adjusted_close_steps.py  allocation_view_steps.py  bar_cache_steps.py  bollinger_steps.py  bucket_steps.py  bus_lookback_steps.py  catalysts_steps.py  coherence_enforcement_steps.py  combined_verdict_steps.py  compass_scorer_steps.py  conviction_steps.py  cross_sectional_steps.py  data_worker_steps.py  dispersion_steps.py  dividend_dashboard_steps.py  documents_steps.py  earnings_steps.py  earnings_suppressor_steps.py  email_charts_steps.py  email_digest_steps.py  email_pdf_steps.py  entry_timing_steps.py  eps_tracker_steps.py  etf_xray_steps.py  exit_framework_steps.py  fundamental_analysis_steps.py  fundamentals_steps.py  gems_steps.py  holdings_steps.py  horizon_demotion_steps.py  horizons_steps.py  ichimoku_steps.py  intraday_flat_steps.py  llm_health_steps.py  llm_signal_gate_steps.py  macro_regime_steps.py  manual_mf_sleeve_steps.py  market_state_classify_steps.py  market_state_fields_steps.py  mcp_bar_cache_steps.py  (+35 more)
strategies/scripts/: com.tradepro.algo-digest.plist  com.tradepro.data-worker.plist  com.tradepro.email-digest.plist  com.tradepro.eps-snapshot.plist  com.tradepro.heartbeat.plist  com.tradepro.intraday-engine.plist  com.tradepro.live-portfolio.plist  com.tradepro.paper.plist  com.tradepro.refresh.plist  com.tradepro.worker.plist  data-worker.sh  email-digest.sh  eps-snapshot.sh  install-launchd.sh  intraday-engine.sh  paper-session.sh  push_to_api.py  refresh.sh  run_backtest.py  smoke-e2e-paper-trading.sh  worker.sh
strategies/tools/: gen_ts_types.py
strategies/tradepro_strategies/: __init__.py  analyst_actions.py  api_settings.py  backtest.py  cache.py  catalysts.py  combined_verdict.py  compare.py  compass_scorer.py  cross_sectional.py  data.py  earnings.py  email_charts.py  email_digest.py  email_pdf.py  eps_tracker.py  exit_framework.py  external_consensus.py  factor_types.py  fees.py  fundamental_analysis.py  fundamentals.py  gems.py  holdings.py  horizons.py  indicators.py  macro_regime.py  market_context.py  market_state.py  news.py  news_context.py  news_sentiment.py  observability.py  rationale.py  regimes.py  regression_panel.py  remote_settings.py  risk.py  runstate.py  secrets.py  (+4 more)
strategies/tradepro_strategies/bar_cache/: __init__.py  asset_class.py  errors.py  manifest.py  preferences.py  store.py  telemetry.py
strategies/tradepro_strategies/cli/: __init__.py  algo_digest.py  analysis_server.py  bar_cache_cli.py  build_high_beta_universe.py  data_worker.py  doc_upload.py  email_digest.py  embed.py  equity_pipeline.py  extract_server.py  heartbeat.py  ig_populate_epics.py  intraday_engine.py  live_portfolio.py  mcp_server.py  paper_backtest.py  paper_compare.py  paper_daemon.py  paper_session.py  paper_strategies_push.py  push_to_api.py  quant_backtest.py  refresh.py  refresh_universes.py  regression_panel.py  run_backtest.py  run_comparison.py  sentiment_score.py  trigger_ichimoku.py  worker.py
strategies/tradepro_strategies/core_portfolio/: __init__.py  allocation_view.py  dividend_dashboard.py  entry_timing.py  etf_xray.py  manual_mf_sleeve.py  quality_scorecard.py  symbol_analysis_card.py  valuation_layer.py
strategies/tradepro_strategies/data_ops/: __init__.py  registry.py  types.py
strategies/tradepro_strategies/documents/: __init__.py  extractor.py  manifest.py
strategies/tradepro_strategies/embeddings/: __init__.py  chunker.py  embedder.py  store.py  updater.py
strategies/tradepro_strategies/llm/: __init__.py  claude_provider.py  factory.py  ollama_provider.py  provider.py
strategies/tradepro_strategies/mcp/: __init__.py  server.py  session.py  tools.py  trace.py  verify.py
(+422 files in other folders)
