[project]
name = "tradepro-strategies"
version = "0.1.0"
description = "TradePro research: data loaders, indicators, backtests, and signal engines for local M-series runs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TradePro" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "requests>=2.32",
    "matplotlib>=3.8",
    "python-dateutil>=2.9",
    "pyarrow>=17.0",          # parquet cache
    "duckdb>=1.1",            # ad-hoc queries over the cache
    "firebase-admin>=6.5",    # push results to Firestore from the Mac
    "mcp>=1.27.0",
    "anthropic>=0.97.0",
    "pdfplumber>=0.11.9",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "torch>=2.3",             # MPS accelerated on Apple Silicon
]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
tradepro-backtest = "tradepro_strategies.cli.run_backtest:main"
tradepro-compare = "tradepro_strategies.cli.run_comparison:main"
tradepro-doc-upload = "tradepro_strategies.cli.doc_upload:main"
tradepro-heartbeat = "tradepro_strategies.cli.heartbeat:main"
tradepro-mcp = "tradepro_strategies.cli.mcp_server:main"
tradepro-push = "tradepro_strategies.cli.push_to_api:main"
tradepro-refresh = "tradepro_strategies.cli.refresh:main"
tradepro-worker = "tradepro_strategies.cli.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradepro_strategies"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "behave>=1.3.3",
]
